[tool.poetry]
name = "alura-space"
version = "0.1.0"
description = ""
authors = ["violiveiradev <violiveira.dev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
